unpackaged/main/default/objects/FAQ__kav/fields/Categories__c.field-meta.xml
<CustomField>
    <fullName>Categories__c</fullName>
    <label>Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Categories</valueSetName>
    </valueSet>
</CustomField>