unpackaged/main/default/objects/FAQ__kav/fields/Featured_Position__c.field-meta.xml
<CustomField>
    <fullName>Featured_Position__c</fullName>
    <label>Featured Position</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>