unpackaged/main/default/objects/FAQ__kav/fields/Links_Verified__c.field-meta.xml
<CustomField>
    <fullName>Links_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Links Verified</label>
    <type>Checkbox</type>
</CustomField>