unpackaged/main/default/objects/FAQ__kav/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Question</label>
    <type>TextArea</type>
</CustomField>